# Marty

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  API_SECURITY_IMPLEMENTATION.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BUILD_AND_INTEGRATION_GUIDE.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_PROFILE_MIGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  ISO18013_MIGRATION_STATUS.md  ISO18013_STATUS_UPDATE.md  ISO18013_VISUAL_OVERVIEW.md  KMS_CREDENTIAL_E2E_TESTS.md  KMS_INTEGRATION_TESTS_COMPLETE.md  LICENSING_PLAN.md  MIGRATION_STATUS.md  Makefile  Marty-2.code-workspace  Marty-antigravity.code-workspace  Marty.code-workspace  OBV3_IMPLEMENTATION_COMPLETE.md  PRE_DEPLOYMENT_CHECKLIST.md  PUBLIC_SUBSCRIPTION_LAUNCH_TESTING_CHECKLIST.md  PYTHON_BRIDGE_IMPLEMENTATION_SUMMARY.md  PYTHON_RUST_BRIDGE_GUIDE.md  QUICK_REFERENCE.md  README.md  REDIS_MULTI_TENANT_IMPLEMENTATION.md  REMOTE_SIGNING_IMPLEMENTATION_SUMMARY.md  RUNTIME_CONFIG_INTEGRATION_SUMMARY.md  TEMPLATE_PUBLISHING_COMPLETE.md  TESTING_CHECKLIST.md  TESTING_GAPS_SUMMARY.md  TRUST_PROFILE_ONBOARDING_SUMMARY.md  UPDATE_MANAGER_INTEGRATION.md  ZERO_COST_CI_IMPLEMENTATION.md  build_python_bridge.sh  (+11 more)
.github/workflows/: cd.yml  ci.yml  codeql.yml  docs.yml  k8s-e2e.yml  license-compliance.yml  organization-quality.yml  proto-validation.yml  publication-audit.yml  publish-marty-common-beta.yml  publish-marty-common.yml  publish-product-catalog.yml  publish-pypi.yml  quality-gates.yml  rust-cross-validation.yml  security.yml
config/: base.yaml  development.yaml  policy.yaml  production.yaml  testing.yaml
config/openbao/: init-transit.sh
config/plugins/: digital_identity.yaml
config/security/: crypto_boundaries.yaml
data/csca/: lifecycle_events.json
docker/: .dockerignore  license-entrypoint.sh  mmf-plugin.Dockerfile
docs/: ARCHITECTURE_DECISIONS.md  BUSINESS_OVERVIEW.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PROFILE_IMPLEMENTATION_STATUS.md  DEVELOPER_GUIDE.md  DEVS_TIER_KEY_VAULT_GUIDE.md  Digital_Identity_model.md  ENVIRONMENT_SETUP_GUIDE.md  FUTURE_WORK_COMPLETE.md  KMS_CONFIGURATION_API.md  KMS_DISASTER_RECOVERY.md  KMS_INTEGRATION_TESTING.md  KMS_OPERATIONS_GUIDE.md  KMS_SECURITY_ARCHITECTURE.md  KMS_SECURITY_AUDIT.md  LOCAL_BUILD_SETUP.md  NEXT_STEPS_COMPLETE.md  REMEDIATION_BACKLOG.md  REMOTE_SIGNING_TRUST_ANCHOR_PLAN.md  RESILIENCE_QUICKSTART.md  RevocationProfile_Implementation_Summary.md  RevocationProfile_Integration_Architecture.md  RevocationProfile_Migration_Complete.md  RevocationProfile_Proposal.md  RevocationProfile_Quick_Reference.md  RevocationProfile_Testing_Guide.md  RevocationProfile_Verification_Report.md  SERVICE_TOPOLOGY.md  TIER_BASED_SIGNING_IMPLEMENTATION.md  USER_GUIDE.md
docs/architecture/: BYOK_IMPLEMENTATION.md  CERTIFICATE_MANAGEMENT_FRAMEWORK_DESIGN.md
docs/errors/: AUTH.md  ORG.md  README.md  SRV.md  VAL.md
docs/features/: PRESENTATION_POLICY_IMPLEMENTATION.md
docs/guides/: CERTIFICATE_MANAGEMENT_MIGRATION_PLAN.md  DEPLOYMENT_PROFILE_MIGRATION_GUIDE.md  DEPLOYMENT_PROFILE_QUICK_REFERENCE.md  DOCKER.md  (+2 more)
examples/: iso18013_integration_example.py  tier_based_signing_example.py
marty-ui/: Makefile  docker-compose.yml
marty-verifier/: Cargo.toml  README.md
marty-verifier/crates/marty-biometrics/: Cargo.toml
marty-verifier/crates/marty-biometrics/src/: error.rs  lib.rs  provider.rs  traits.rs  types.rs
migrations/: 20260406_add_kms_config_to_organizations.sql  20260406_add_kms_config_to_organizations_rollback.sql
proto/: biometric_service.proto  dtc_engine.proto  passport_engine.proto
rust/: Cargo.toml  build-wasm.sh  clippy.toml  deny.toml  rustfmt.toml
rust/marty-rs/: Cargo.toml
rust/marty-rs/src/: error.rs  lib.rs  status_list.rs  wasm.rs
rust/marty-rs/src/mdoc/: issuance.rs  mod.rs  presentation.rs  types.rs
rust/marty-verification/: Cargo.toml
rust/marty-verification/examples/: generate_open_badges_fixtures.rs
rust/marty-verification/src/: lib.rs
rust/marty-verification/src/asn1/: crl.rs  master_list.rs  sod.rs
rust/marty-verification/src/bindings/: mod.rs
rust/marty-verification/src/crypto/: cert_builder.rs  certificate.rs  crl.rs  des.rs  ecdh.rs  ecdsa.rs  ed25519.rs  ed448.rs  iso9796.rs  kdf.rs  keygen.rs  mod.rs  ocsp.rs  pkcs12.rs  rsa.rs  serialization.rs  symmetric.rs
rust/marty-verification/src/dtc/: mod.rs
rust/marty-verification/src/error/: builders.rs  codes.rs  conversions.rs  mod.rs  types.rs  verification_error.rs
rust/marty-verification/src/jwk/: jwe.rs  jws.rs  key.rs
rust/marty-verification/src/mdoc/: device_response.rs
rust/marty-verification/src/open_badges/: mod.rs  ob2.rs  ob3.rs  types.rs
rust/marty-verification/src/pkd/: icao_pkd.rs
rust/marty-verification/src/trust_anchor/: csca.rs
rust/marty-verification/src/verification/: chain.rs  emrtd.rs
rust/marty-verification/tests/: chain_validation_tests.rs  cross_validation.rs  dtc_tests.rs  open_badges_tests.rs
scripts/: build-all-local.sh  build-docker-dry.sh  build-services.sh  final_db_per_service_verification.py  generate-dev-license.py  generate_api_docs.py  generate_dry_configs.py  ghcr-setup.sh  migrate_mrz_usage.py  pkd_sync.py  release-helper.sh  run_kms_integration_tests.sh  seed_marty_org_catalog.py  setup_databases.py  setup_obv3.py  standardize-helm-values.sh  sync_product_catalog.py  update-requirements.sh  validate_security_features.sh  verify_db_separation.py
src/: compile_protos.py
tests/: ONBOARDING_RESUME_TEST_GUIDE.md  conftest.py  debug_onboarding_resume.py  debug_onboarding_resume.sh  isolation.py  mock_csca_test.py  test_legacy_oid4vci_isolation.py  test_secure_crypto.py
(+560 files in other folders)
