[package]
name = "marty-rs"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Marty digital identity verification"
license = "MIT"

[lib]
name = "_marty_rs"
crate-type = ["cdylib"]

[dependencies]
# From workspace
pyo3 = { workspace = true }
ssi = { workspace = true }
tokio = { workspace = true }
isomdl = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
bs58 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ssi-status = { workspace = true }
flate2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
ciborium = { workspace = true }

# Internal crate
marty-verification = { path = "../marty-verification", version = "0.1.0", features = ["python"] }
