[package]
name = "marty-verification"
version = "0.1.0"
edition = "2021"
description = "Unified trust chain verification for mDL (IACA) and eMRTD (CSCA)"
license = "MIT"

[lib]
name = "marty_verification"
crate-type = ["rlib"]

[features]
default = ["iaca", "csca"]
iaca = []           # AAMVA mDL verification
csca = []           # ePassport/eMRTD verification
python = ["pyo3"]   # Python bindings via PyO3
aamva-client = ["reqwest", "tokio"]  # AAMVA DTS PKD client
icao-client = ["reqwest", "tokio"]   # ICAO PKD client
ocsp-client = ["reqwest", "tokio", "moka"]  # OCSP client with caching
cross-validation = []  # OpenSSL cross-validation tests (enables extra dev deps)
cert-builder = []   # Certificate builder (requires x509-cert 0.3+ API)
full-pkd = []       # Full PKD client support (has some API compatibility issues)
serde = []          # Enable serde serialization for error types

[dependencies]
# Crypto and certificates
x509-cert = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
pem-rfc7468 = { workspace = true }
signature = { workspace = true }

# RSA support
rsa = { workspace = true }

# PKCS standards for key serialization
pkcs8 = { workspace = true }
pkcs5 = { workspace = true }
spki = { workspace = true }

# CMS/CRL/OCSP
cms = { workspace = true }
x509-ocsp = { workspace = true }

# Symmetric encryption
aes-gcm = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
des = { workspace = true }

# Key derivation
hkdf = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
cmac = { workspace = true }
cipher = { workspace = true }

# Ed25519 and X25519
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }

# Ed448 (for eMRTD Active Authentication)
ed448-goldilocks-plus = { workspace = true }

# PKCS#12 (for key/cert bundle parsing)
p12 = { workspace = true }

# Random number generation
rand = { workspace = true }
rand_core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }

# Time handling
chrono = { workspace = true }

# Optional dependencies
pyo3 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
moka = { workspace = true, optional = true }

# Re-use isomdl types where possible
isomdl = { workspace = true }
hex = "0.4.3"

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
time = "0.3"

# Cross-validation testing dependencies (always available in tests)
rcgen = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

# OpenSSL for cross-validation (Unix only)
[target.'cfg(unix)'.dev-dependencies]
openssl = { workspace = true }
