[package]
name = "marty-biometrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Biometric verification for Marty Verifier"

[features]
default = []
opencv = []  # Local OpenCV-based face matching
# Future provider integrations
sita = []
nec = []
idemia = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

# Image handling
image = "0.25"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
